fixed long word break on students.php

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,8 @@ img {
 p{
     line-height: 1.6em;
     margin-top: 30px;
-    font-family: 'Open Sans', sans-serif;;
+    font-family: 'Open Sans', sans-serif;
+    word-break: break-all;
 }
 
 h1{
